[gd_scene load_steps=13 format=3 uid="uid://cwe46fe62ssm7"]

[ext_resource type="Script" uid="uid://cdbkdebocbfhy" path="res://balloon/balloon.gd" id="1_jra6m"]
[ext_resource type="PackedScene" uid="uid://ckvgyvclnwggo" path="res://addons/dialogue_manager/dialogue_label.tscn" id="2_kg5wc"]
[ext_resource type="Script" uid="uid://bb52rsfwhkxbn" path="res://addons/dialogue_manager/dialogue_responses_menu.gd" id="3_ug21d"]
[ext_resource type="Texture2D" uid="uid://yinp87lmjpus" path="res://balloon/sprites/namebox.svg" id="4_uro0l"]
[ext_resource type="Texture2D" uid="uid://b6s7xokivw0a" path="res://balloon/sprites/textbox.svg" id="5_rdoix"]
[ext_resource type="Texture2D" uid="uid://11bnygwu7cr4" path="res://balloon/sprites/back_button.svg" id="8_uro0l"]
[ext_resource type="Script" uid="uid://cs70f0otc6h8p" path="res://gui/hover_modulate.gd" id="9_uro0l"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_spyqn"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.329412, 0.329412, 0.329412, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ri4m3"]
bg_color = Color(0.121569, 0.121569, 0.121569, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e0njw"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.6, 0.6, 0.6, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qkmqt"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Theme" id="Theme_qq3yp"]
default_font_size = 20
Button/styles/disabled = SubResource("StyleBoxFlat_spyqn")
Button/styles/focus = SubResource("StyleBoxFlat_ri4m3")
Button/styles/hover = SubResource("StyleBoxFlat_e0njw")
Button/styles/normal = SubResource("StyleBoxFlat_e0njw")
MarginContainer/constants/margin_bottom = 15
MarginContainer/constants/margin_left = 30
MarginContainer/constants/margin_right = 30
MarginContainer/constants/margin_top = 15
PanelContainer/styles/panel = SubResource("StyleBoxFlat_qkmqt")

[node name="ExampleBalloon" type="CanvasLayer"]
layer = 100
script = ExtResource("1_jra6m")

[node name="Balloon" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_qq3yp")

[node name="TextPanels" type="Control" parent="Balloon"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_group_ = true

[node name="CharacterLabelContainer" type="TextureRect" parent="Balloon/TextPanels"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 210.0
offset_top = 699.0
offset_right = 612.0
offset_bottom = 790.0
texture = ExtResource("4_uro0l")

[node name="MarginContainer" type="MarginContainer" parent="Balloon/TextPanels/CharacterLabelContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 11
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 13

[node name="CharacterLabel" type="RichTextLabel" parent="Balloon/TextPanels/CharacterLabelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
theme_override_font_sizes/normal_font_size = 26
bbcode_enabled = true
text = "Character"
fit_content = true
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer" type="TextureRect" parent="Balloon/TextPanels"]
layout_mode = 2
offset_left = 151.0
offset_top = 785.0
offset_right = 1772.0
offset_bottom = 1049.0
texture = ExtResource("5_rdoix")

[node name="MarginContainer" type="MarginContainer" parent="Balloon/TextPanels/PanelContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 194
theme_override_constants/margin_top = 47
theme_override_constants/margin_right = 194

[node name="DialogueLabel" parent="Balloon/TextPanels/PanelContainer/MarginContainer" instance=ExtResource("2_kg5wc")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 26
text = "Dialogue..."

[node name="ResponsesMenu" type="VBoxContainer" parent="Balloon" node_paths=PackedStringArray("response_template")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -290.5
offset_top = -35.0
offset_right = 290.5
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 8
theme_override_constants/separation = 2
alignment = 1
script = ExtResource("3_ug21d")
response_template = NodePath("ResponseExample")

[node name="ResponseExample" type="Button" parent="Balloon/ResponsesMenu"]
layout_mode = 2
text = "Response example"

[node name="BackButton" type="Button" parent="Balloon"]
modulate = Color(0.486275, 0.486275, 0.486275, 1)
layout_mode = 0
offset_left = 15.0
offset_top = 14.0
offset_right = 65.0
offset_bottom = 64.0
focus_mode = 0
mouse_default_cursor_shape = 2
icon = ExtResource("8_uro0l")
flat = true
icon_alignment = 1
script = ExtResource("9_uro0l")
hover_modulate = Color(1, 1, 1, 1)

[connection signal="gui_input" from="Balloon" to="." method="_on_balloon_gui_input"]
[connection signal="response_selected" from="Balloon/ResponsesMenu" to="." method="_on_responses_menu_response_selected"]
[connection signal="pressed" from="Balloon/BackButton" to="." method="_on_back_pressed"]
